tests/ui/impl-trait/recursive/recursive-impl-trait-type-direct-with-earlybound-lifetime-2.rs
#![allow(unconditional_recursion)]

fn foo<'a: 'a>() -> impl Sized {
    let _: *mut &'a () = foo::<'a>();
    //~^ ERROR
    loop {}
}

fn main() {}
